# Test

./: .flake8  .gitignore  CHANGELOG.md  Dockerfile.cpp  Dockerfile.python  README.md  dual_chess_ai.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  cpp.yml  flake8.yml  python-tests.yml  tests.yml
chess_ai/: __init__.py  action_index.py  config.py  evaluation.py  game_environment.py  lmdb_replay_buffer.py  mcts.py  network_manager.py  policy_value_net.py  replay_buffer.py  self_play.py  trainer.py
k8s/: cronjob.yaml  deployment.yaml  prometheus.yaml  service.yaml
python/scripts/: export_onnx.py
scripts/: install.sh  play_vs_ai.py  serve.py  train.py
superengine/: CMakeLists.txt  Makefile  main.cpp
superengine/.github/workflows/: build.yml
superengine/docs/: design.md
superengine/engine/: bitboard.cpp  bitboard.h  mcts.h  movegen.cpp  movegen.h  nnue_eval.cpp  nnue_eval.h  onnx_policy.cpp  onnx_policy.h  perft.h  position.cpp  position.h  search.cpp  search.h  uci.cpp
superengine/scripts/: prepare_data.py  quantize_nnue.py  selfplay_ray.py  train_nnue.py  train_policy.py
superengine/tests/: perft.cpp  test_movegen.cpp  test_nnue.cpp  test_position.cpp  test_search.cpp  test_sliding.cpp  unit_bitboard.cpp
tests/: test_action_index.py  test_buffer.py  test_encoding.py  test_evaluation.py  test_lmdb_replay_buffer.py  test_mcts.py  test_metrics.py  test_network_manager.py  test_quantize_nnue.py  test_quiet_move.py  test_replay_buffer.py
torch/: __init__.py
